--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "expo-asset": "~8.10.1",
-    "expo-updates": "~0.18.11"
+    "expo-updates": "~0.18.11",
+    "expo-image": "~1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
